--- a/Index.html
+++ b/Index.html
@@ -47,7 +47,6 @@
                                 <img src="img/s3.svg" alt="Redes sociales">
                             </div>
                         </a>
-
                     </div>
                 </div>
             </nav>
@@ -58,8 +57,8 @@
                 <div class="swiper-wrapper">
 
                     <div class="swiper-slide">
-                        <div class="slaider">
-                            <div class="slider-text">
+                        <div class="slider">
+                            <div class="slider-txt">
                                 <h1>Hamburguesa</h1>
                                 <p>
                                     Lorem ipsum dolor sit amet, consectetur
@@ -67,8 +66,8 @@
                                     voluptatum hic ipsum aut ex architecto.
                                 </p>
                                 <div class="botones">
-                                     <a href="#" class="btn-1">Comprar</a>
-                                     <a href="#" class="btn-1">Menu</a>
+                                    <a href="#" class="btn-1">Comprar</a>
+                                    <a href="#" class="btn-1">Menu</a>
                                 </div>
                             </div>
                             <div class="slider-img">
@@ -77,11 +76,361 @@
                         </div>
                     </div>
 
+                    <div class="swiper-slide">
+                        <div class="slider">
+                            <div class="slider-txt">
+                                <h1>Torta</h1>
+                                <p>
+                                    Lorem ipsum dolor sit amet, consectetur
+                                    adipisicing elit. At iusto consequuntur
+                                    voluptatum hic ipsum aut ex architecto.
+                                </p>
+                                <div class="botones">
+                                    <a href="#" class="btn-1">Comprar</a>
+                                    <a href="#" class="btn-1">Menu</a>
+                                </div>
+                            </div>
+                            <div class="slider-img">
+                                <img src="img/slider2.png" alt="">
+                            </div>
+                        </div>
+                    </div>
+
+                    <div class="swiper-slide">
+                        <div class="slider">
+                            <div class="slider-txt">
+                                <h1>Hamburguesa</h1>
+                                <p>
+                                    Lorem ipsum dolor sit amet, consectetur
+                                    adipisicing elit. At iusto consequuntur
+                                    voluptatum hic ipsum aut ex architecto.
+                                </p>
+                                <div class="botones">
+                                    <a href="#" class="btn-1">Comprar</a>
+                                    <a href="#" class="btn-1">Menu</a>
+                                </div>
+                            </div>
+                            <div class="slider-img">
+                                <img src="img/slider3.png" alt="">
+                            </div>
+                        </div>
+                    </div>
+
+
+                    <div class="swiper-button-next"></div>
+                    <div class="swiper-button-prev"></div>
+                    <div class="swiper-pagination"></div>
                 </div>
             </div>
 
         </div>
     </header>
+
+    <main class="products">
+        <div class="tabs container">
+
+            <input type="radio" name="tabs" id="tab1" checked="checked" class="tabInput" value="1">
+            <label for="tab1">Hamburguesa</label>
+            <div class="tab">
+                <div class="swiper myswiper-2" id="swiper1">
+
+                    <div class="swiper-wrapper">
+
+                        <div class="swiper-slide">
+                            <div class="product">
+                                <div class="produtc-img">
+                                    <h4>Nuevo</h4>
+                                    <img src="img/food1.png" alt="">
+                                </div>
+                                <div class="product-txt">
+                                    <h4>Producto</h4>
+                                    <p>Calidad Preium</p>
+                                    <span class="price">$80.00</span>
+                                </div>
+                            </div>
+                        </div>
+
+                        <div class="swiper-slide">
+                            <div class="product">
+                                <div class="produtc-img">
+                                    <h4>Nuevo</h4>
+                                    <img src="img/food2.png" alt="">
+                                </div>
+                                <div class="product-txt">
+                                    <h4>Producto</h4>
+                                    <p>Calidad Preium</p>
+                                    <span class="price">$80.00</span>
+                                </div>
+                            </div>
+                        </div>
+
+                        <div class="swiper-slide">
+                            <div class="product">
+                                <div class="produtc-img">
+                                    <h4>Nuevo</h4>
+                                    <img src="img/food3.png" alt="">
+                                </div>
+                                <div class="product-txt">
+                                    <h4>Producto</h4>
+                                    <p>Calidad Preium</p>
+                                    <span class="price">$80.00</span>
+                                </div>
+                            </div>
+                        </div>
+
+                    </div>
+
+                    <div class="swiper-button-next"></div>
+                    <div class="swiper-button-prev"></div>
+
+                </div>
+            </div>
+
+            <input type="radio" name="tabs" id="tab2" checked="checked" class="tabInput" value="2">
+            <label for="tab2">Burritos</label>
+            <div class="tab">
+                <div class="swiper myswiper-2" id="swiper2">
+
+                    <div class="swiper-wrapper">
+
+                        <div class="swiper-slide">
+                            <div class="product">
+                                <div class="produtc-img">
+                                    <h4>Nuevo</h4>
+                                    <img src="img/food4.png" alt="">
+                                </div>
+                                <div class="product-txt">
+                                    <h4>Producto</h4>
+                                    <p>Calidad Preium</p>
+                                    <span class="price">$80.00</span>
+                                </div>
+                            </div>
+                        </div>
+
+                        <div class="swiper-slide">
+                            <div class="product">
+                                <div class="produtc-img">
+                                    <h4>Nuevo</h4>
+                                    <img src="img/food5.png" alt="">
+                                </div>
+                                <div class="product-txt">
+                                    <h4>Producto</h4>
+                                    <p>Calidad Preium</p>
+                                    <span class="price">$80.00</span>
+                                </div>
+                            </div>
+                        </div>
+
+                        <div class="swiper-slide">
+                            <div class="product">
+                                <div class="produtc-img">
+                                    <h4>Nuevo</h4>
+                                    <img src="img/food6.png" alt="">
+                                </div>
+                                <div class="product-txt">
+                                    <h4>Producto</h4>
+                                    <p>Calidad Preium</p>
+                                    <span class="price">$80.00</span>
+                                </div>
+                            </div>
+                        </div>
+
+                    </div>
+
+                    <div class="swiper-button-next"></div>
+                    <div class="swiper-button-prev"></div>
+
+                </div>
+            </div>
+
+            <input type="radio" name="tabs" id="tab3" checked="checked" class="tabInput" value="3">
+            <label for="tab3">Variedades</label>
+            <div class="tab">
+                <div class="swiper myswiper-2" id="swiper3">
+
+                    <div class="swiper-wrapper">
+
+                        <div class="swiper-slide">
+                            <div class="product">
+                                <div class="produtc-img">
+                                    <h4>Nuevo</h4>
+                                    <img src="img/food7.png" alt="">
+                                </div>
+                                <div class="product-txt">
+                                    <h4>Producto</h4>
+                                    <p>Calidad Preium</p>
+                                    <span class="price">$80.00</span>
+                                </div>
+                            </div>
+                        </div>
+
+                        <div class="swiper-slide">
+                            <div class="product">
+                                <div class="produtc-img">
+                                    <h4>Nuevo</h4>
+                                    <img src="img/food8.png" alt="">
+                                </div>
+                                <div class="product-txt">
+                                    <h4>Producto</h4>
+                                    <p>Calidad Preium</p>
+                                    <span class="price">$80.00</span>
+                                </div>
+                            </div>
+                        </div>
+
+                        <div class="swiper-slide">
+                            <div class="product">
+                                <div class="produtc-img">
+                                    <h4>Nuevo</h4>
+                                    <img src="img/food9.png" alt="">
+                                </div>
+                                <div class="product-txt">
+                                    <h4>Producto</h4>
+                                    <p>Calidad Preium</p>
+                                    <span class="price">$80.00</span>
+                                </div>
+                            </div>
+                        </div>
+
+                    </div>
+
+                    <div class="swiper-button-next"></div>
+                    <div class="swiper-button-prev"></div>
+
+                </div>
+            </div>
+
+        </div>
+
+    </main>
+
+    <section class="info containe">
+        <div class="info-img">
+            <img src="img/info.png" alt="Información">
+        </div>
+        <div class="info-txt">
+            <h2>Información</h2>
+            <p>
+                Lorem ipsum dolor, sit amet consectetur
+                adipisicing elit. Numquam ullam
+                distinctio temporibus suscipit
+                blanditiis incidunt obcaecati.
+            </p>
+            <a href="#" class="btn-2">Mas Información</a>
+
+        </div>
+    </section>
+
+    <section class="Horario">
+        <div class="horario-info container">
+
+            <h2>Horario</h2>
+            <div class="horario-txt">
+                <div class="txt">
+                    <h4>Dirección</h4>
+                    <p>
+                        lamo ratione nesciunt
+                    </p>
+                    <p>
+                        Lorem ipsum dolor sit.
+                    </p>
+                </div>
+                <div class="txt">
+                    <h4>Horario</h4>
+                    <p>
+                        Lunes a Viernes: 9 am a 8 pm
+                    </p>
+                    <p>
+                        Sabados y Domingos : 10 am a 8 pm
+                    </p>
+                </div>
+                <div class="txt">
+                    <h4>Telefono</h4>
+                    <p>
+                        3045602370
+                    </p>
+                    <p>
+                        3506114080
+                    </p>
+                </div>
+                <div class="txt">
+                    <h4>Redes Sociales</h4>
+                    <div class="socials">
+                        <a href="#">
+                            <div class="social">
+                                <img src="img/s1.svg" alt="Redes sociales">
+                            </div>
+                        </a>
+                        <a href="#">
+                            <div class="social">
+                                <img src="img/s2.svg" alt="Redes sociales">
+                            </div>
+                        </a>
+                        <a href="#">
+                            <div class="social">
+                                <img src="img/s3.svg" alt="Redes sociales">
+                            </div>
+                        </a>
+                    </div>
+                </div>
+            </div>
+        </div>
+    </section>
+
+    <section>
+        <iframe class="map" src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d15679.690857065469!2d-74.755272!3d10.740439899999998!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x8ef5c516ed31454f%3A0x572fe5c8a0dc6eda!2sPalmar%20de%20Varela%2C%20Atl%C3%A1ntico!5e0!3m2!1ses-419!2sco!4v1683558807554!5m2!1ses-419!2sco" width="600" height="450" style="border:0;" allowfullscreen="" loading="lazy" referrerpolicy="no-referrer-when-downgrade"></iframe>
+    </section>
+
+<footer class="footer container">
+    <img class="logo-2" src="img/logo.svg" alt="">
+    <div class="links">
+        <h4>lorem</h4> 
+        <ul>
+           <li><a href="#">Lorem</a></li> 
+           <li><a href="#">Lorem</a></li> 
+           <li><a href="#">Lorem</a></li> 
+           <li><a href="#">Lorem</a></li> 
+        </ul>
+    </div>
+    <div class="links">
+        <h4>lorem</h4> 
+        <ul>
+           <li><a href="#">Lorem</a></li> 
+           <li><a href="#">Lorem</a></li> 
+           <li><a href="#">Lorem</a></li> 
+           <li><a href="#">Lorem</a></li> 
+        </ul>
+    </div>
+    <div class="links">
+        <h4>lorem</h4> 
+        <ul>
+           <li><a href="#">Lorem</a></li> 
+           <li><a href="#">Lorem</a></li> 
+           <li><a href="#">Lorem</a></li> 
+           <li><a href="#">Lorem</a></li> 
+        </ul>
+    </div>
+    <div class="links">
+        <h4>lorem</h4> 
+        <div class="socials">
+            <a href="#">
+                <div class="social">
+                    <img src="img/s1.svg" alt="Redes sociales">
+                </div>
+            </a>
+            <a href="#">
+                <div class="social">
+                    <img src="img/s2.svg" alt="Redes sociales">
+                </div>
+            </a>
+            <a href="#">
+                <div class="social">
+                    <img src="img/s3.svg" alt="Redes sociales">
+                </div>
+            </a>
+        </div>
+    </div>
+</footer>
 
     <script src="https://cdn.jsdelivr.net/npm/swiper/swiper-bundle.min.js"></script>
     <script src="script.js"></script>
