--- a/Index.html
+++ b/Index.html
@@ -6,6 +6,7 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Fast Foods</title>
+    <link rel="shortcut icon" href="img/ICONOhamburguer.png">
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/swiper/swiper-bundle.min.css" />
     <link rel="stylesheet" href="style.css">
 </head>
@@ -378,59 +379,62 @@
     </section>
 
     <section>
-        <iframe class="map" src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d15679.690857065469!2d-74.755272!3d10.740439899999998!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x8ef5c516ed31454f%3A0x572fe5c8a0dc6eda!2sPalmar%20de%20Varela%2C%20Atl%C3%A1ntico!5e0!3m2!1ses-419!2sco!4v1683558807554!5m2!1ses-419!2sco" width="600" height="450" style="border:0;" allowfullscreen="" loading="lazy" referrerpolicy="no-referrer-when-downgrade"></iframe>
+        <iframe class="map"
+            src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d15679.690857065469!2d-74.755272!3d10.740439899999998!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x8ef5c516ed31454f%3A0x572fe5c8a0dc6eda!2sPalmar%20de%20Varela%2C%20Atl%C3%A1ntico!5e0!3m2!1ses-419!2sco!4v1683558807554!5m2!1ses-419!2sco"
+            width="100%" height="400" style="border:0;" allowfullscreen="" loading="lazy"
+            referrerpolicy="no-referrer-when-downgrade"></iframe>
     </section>
 
-<footer class="footer container">
-    <img class="logo-2" src="img/logo.svg" alt="">
-    <div class="links">
-        <h4>lorem</h4> 
-        <ul>
-           <li><a href="#">Lorem</a></li> 
-           <li><a href="#">Lorem</a></li> 
-           <li><a href="#">Lorem</a></li> 
-           <li><a href="#">Lorem</a></li> 
-        </ul>
-    </div>
-    <div class="links">
-        <h4>lorem</h4> 
-        <ul>
-           <li><a href="#">Lorem</a></li> 
-           <li><a href="#">Lorem</a></li> 
-           <li><a href="#">Lorem</a></li> 
-           <li><a href="#">Lorem</a></li> 
-        </ul>
-    </div>
-    <div class="links">
-        <h4>lorem</h4> 
-        <ul>
-           <li><a href="#">Lorem</a></li> 
-           <li><a href="#">Lorem</a></li> 
-           <li><a href="#">Lorem</a></li> 
-           <li><a href="#">Lorem</a></li> 
-        </ul>
-    </div>
-    <div class="links">
-        <h4>lorem</h4> 
-        <div class="socials">
-            <a href="#">
-                <div class="social">
-                    <img src="img/s1.svg" alt="Redes sociales">
-                </div>
-            </a>
-            <a href="#">
-                <div class="social">
-                    <img src="img/s2.svg" alt="Redes sociales">
-                </div>
-            </a>
-            <a href="#">
-                <div class="social">
-                    <img src="img/s3.svg" alt="Redes sociales">
-                </div>
-            </a>
+    <footer class="footer container">
+        <img class="logo-2" src="img/logo.svg" alt="">
+        <div class="links">
+            <h4>lorem</h4>
+            <ul>
+                <li><a href="#">Lorem</a></li>
+                <li><a href="#">Lorem</a></li>
+                <li><a href="#">Lorem</a></li>
+                <li><a href="#">Lorem</a></li>
+            </ul>
         </div>
-    </div>
-</footer>
+        <div class="links">
+            <h4>lorem</h4>
+            <ul>
+                <li><a href="#">Lorem</a></li>
+                <li><a href="#">Lorem</a></li>
+                <li><a href="#">Lorem</a></li>
+                <li><a href="#">Lorem</a></li>
+            </ul>
+        </div>
+        <div class="links">
+            <h4>lorem</h4>
+            <ul>
+                <li><a href="#">Lorem</a></li>
+                <li><a href="#">Lorem</a></li>
+                <li><a href="#">Lorem</a></li>
+                <li><a href="#">Lorem</a></li>
+            </ul>
+        </div>
+        <div class="links">
+            <h4>lorem</h4>
+            <div class="socials">
+                <a href="#">
+                    <div class="social">
+                        <img src="img/s1.svg" alt="Redes sociales">
+                    </div>
+                </a>
+                <a href="#">
+                    <div class="social">
+                        <img src="img/s2.svg" alt="Redes sociales">
+                    </div>
+                </a>
+                <a href="#">
+                    <div class="social">
+                        <img src="img/s3.svg" alt="Redes sociales">
+                    </div>
+                </a>
+            </div>
+        </div>
+    </footer>
 
     <script src="https://cdn.jsdelivr.net/npm/swiper/swiper-bundle.min.js"></script>
     <script src="script.js"></script>
